EMR Cashier module